--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
-    <link rel="stylesheet" href="formatação.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header></header>
     <main class="apresentacao">
-        <h1>Quem é <strong class="destaque_titulo">The_Felpsz?</strong></h1>
-        <h2>Meu nome é Felipe Augusto, tenho 21 anos, moro em Almirante Tamandaré, namoro a 1 ano e 7 meses mais ou menos e atualmente estou desempregado ☺</h2>
-        <ul>
-            <li>Sou um rapaz que faz programa</li>
-            <li>gosto de jogar gosto muito mesmo</li>
-            <li>gosto de ler sobre herbalismo</li>
-            <li>por último mas não menos importante, <span>sou bem legal.</span></li>
-        </ul>
-        <a href="https://www.instagram.com/sir_felpsz">Instagram</a>
-        <a href="https://github.com/Felpsz-Brucciamolino">GitHub</a>
+        <section>
+            <h1>Quem é <strong class="destaque_titulo">The_Felpsz?</strong></h1>
+            <h2>Meu nome é Felipe Augusto, tenho 21 anos, moro em Almirante Tamandaré e estou desempregado ☺</h2>
+            <ul>
+                <li>Sou um rapaz que faz programa ( ͡° ͜ʖ ͡°)</li>
+                <li>gosto de jogar gosto muito mesmo</li>
+                <li>gosto de ler sobre herbalismo</li>
+                <li>por último mas não menos importante, <span>sou bem legal.</span></li>
+            </ul>
+            <a href="https://www.instagram.com/sir_felpsz">Instagram</a>
+            <a href="https://github.com/Felpsz-Brucciamolino">GitHub</a>
+        </section>
         <img src="img/gato_foda.jpeg" alt="gato_foda">
     </main>
     <footer></footer>
