mexendo com sections, classes e importando fontes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <header></header>
     <main class="apresentacao">
-        <section>
-            <h1>Quem é <strong class="destaque_titulo">The_Felpsz?</strong></h1>
-            <h2>Meu nome é Felipe Augusto, tenho 21 anos, moro em Almirante Tamandaré e estou desempregado ☺</h2>
-            <ul>
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo_titulo">Quem é <strong class="destaque_titulo">The_Felpsz?</strong></h1>
+            <h2 class="apresentacao__conteudo_descricao">Meu nome é Felipe Augusto, tenho 21 anos, moro em Almirante Tamandaré e estou desempregado ☺</h2>
+            <ul class="apresentacao__conteudo_lista">
                 <li>Sou um rapaz que faz programa ( ͡° ͜ʖ ͡°)</li>
                 <li>gosto de jogar gosto muito mesmo</li>
                 <li>gosto de ler sobre herbalismo</li>
