melhorei os links do insta com weight, width e padding, junto com outra fonte da mesma família

--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
     <header></header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo_titulo">Quem é <strong class="destaque_titulo">The_Felpsz?</strong></h1>
-            <h2 class="apresentacao__conteudo_descricao">Meu nome é Felipe Augusto, tenho 21 anos, moro em Almirante Tamandaré e estou desempregado ☺</h2>
-            <ul class="apresentacao__conteudo_lista">
+            <h1 class="apresentacao__conteudo__titulo">Quem é <strong class="destaque_titulo">The_Felpsz?</strong></h1>
+            <h2 class="apresentacao__conteudo__descricao">Meu nome é Felipe Augusto, tenho 21 anos, moro em Almirante Tamandaré e estou desempregado ☺</h2>
+            <ul class="apresentacao__conteudo__lista">
                 <li>Sou um rapaz que faz programa ( ͡° ͜ʖ ͡°)</li>
                 <li>gosto de jogar gosto muito mesmo</li>
                 <li>gosto de ler sobre herbalismo</li>
                 <li>por último mas não menos importante, <span>sou bem legal.</span></li>
             </ul>
-            <a href="https://www.instagram.com/sir_felpsz">Instagram</a>
-            <a href="https://github.com/Felpsz-Brucciamolino">GitHub</a>
+            <div class="apresentacao__links">
+                <a class="apresentacao__links__link" href="https://www.instagram.com/sir_felpsz">Instagram</a>
+                <a class="apresentacao__links__link" href="https://github.com/Felpsz-Brucciamolino">GitHub</a>
+            </div>
+
         </section>
         <img src="img/gato_foda.jpeg" alt="gato_foda">
     </main>
