mudei a apresentação de h2 para <p> e deixei fixado a formatação para colunas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Quem é <strong class="destaque_titulo">The_Felpsz?</strong></h1>
-            <h2 class="apresentacao__conteudo__descricao">Meu nome é Felipe Augusto, tenho 21 anos, moro em Almirante Tamandaré e estou desempregado ☺</h2>
+            <p class="apresentacao__conteudo__descricao">Meu nome é Felipe Augusto, tenho 21 anos, moro em Almirante Tamandaré e estou desempregado ☺</p>
             <ul class="apresentacao__conteudo__lista">
                 <li>Sou um rapaz que faz programa ( ͡° ͜ʖ ͡°)</li>
                 <li>gosto de jogar gosto muito mesmo</li>
