--- a/index.html
+++ b/index.html
@@ -14,19 +14,25 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Quem é <strong class="destaque_titulo">The_Felpsz?</strong></h1>
             <p class="apresentacao__conteudo__descricao">Meu nome é Felipe Augusto, tenho 21 anos, moro em Almirante Tamandaré e estou desempregado ☺</p>
-            <ul class="apresentacao__conteudo__lista">
+
+            <!-- <ul class="apresentacao__conteudo__lista">
                 <li>Sou um rapaz que faz programa ( ͡° ͜ʖ ͡°)</li>
                 <li>gosto de jogar gosto muito mesmo</li>
                 <li>gosto de ler sobre herbalismo</li>
                 <li>por último mas não menos importante, <span>sou bem legal.</span></li>
-            </ul>
+            </ul> -->
             <div class="apresentacao__links">
+                <h1 class="apresentacao__links__titulo">Segue minhas redes</h1>
                 <a class="apresentacao__links__link" href="https://www.instagram.com/sir_felpsz">Instagram</a>
                 <a class="apresentacao__links__link" href="https://github.com/Felpsz-Brucciamolino">GitHub</a>
             </div>
 
         </section>
         <img src="img/gato_foda.jpeg" alt="gato_foda">
+        <!-- <video autoplay loop muted playsinline>
+            <source src="img/esqueleto_la_ele.mp4" type="video/mp4">
+            Seu navegador não suporta vídeo.
+        </video> -->
     </main>
     <footer></footer>
 </body>
