Ajustei imagens e o diretório delas, ajustei a formatação geral do site, adicionei alguns efeitos no link e no texto, adicionei Header e Footer

--- a/index.html
+++ b/index.html
@@ -9,31 +9,45 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link">Home</a>
+            <a class="cabecalho__menu__link">Sobre mim</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Quem é <strong class="destaque_titulo">The_Felpsz?</strong></h1>
             <p class="apresentacao__conteudo__descricao">Meu nome é Felipe Augusto, tenho 21 anos, moro em Almirante Tamandaré e estou desempregado ☺</p>
 
-            <!-- <ul class="apresentacao__conteudo__lista">
+            <ul class="apresentacao__conteudo__lista">
                 <li>Sou um rapaz que faz programa ( ͡° ͜ʖ ͡°)</li>
                 <li>gosto de jogar gosto muito mesmo</li>
                 <li>gosto de ler sobre herbalismo</li>
                 <li>por último mas não menos importante, <span>sou bem legal.</span></li>
-            </ul> -->
+            </ul>
             <div class="apresentacao__links">
                 <h1 class="apresentacao__links__titulo">Segue minhas redes</h1>
-                <a class="apresentacao__links__link" href="https://www.instagram.com/sir_felpsz">Instagram</a>
-                <a class="apresentacao__links__link" href="https://github.com/Felpsz-Brucciamolino">GitHub</a>
+                <a class="apresentacao__links__link" href="https://www.instagram.com/sir_felpsz">
+                    <img class="apresentacao__links__img" src="assets/logo_Instagram.png" alt="Logo_Instagram">Instagram
+                </a>
+                <a class="apresentacao__links__link" href="https://github.com/Felpsz-Brucciamolino">
+                    <img class="apresentacao__links__img" src="assets/logo_Github.png" alt="logo_GitHub">GitHub
+                </a>
+                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/felipe-augusto-brusamolin-de-souza-51ab10224">
+                    <img class="apresentacao__links__img" src="assets/logo_Linkedin.png" alt="logo_Linkedin">Linkedin
+                </a>
             </div>
 
         </section>
-        <img src="img/gato_foda.jpeg" alt="gato_foda">
+        <img src="assets/gato_foda.jpeg" alt="gato_foda">
         <!-- <video autoplay loop muted playsinline>
-            <source src="img/esqueleto_la_ele.mp4" type="video/mp4">
+            <source src="assets/esqueleto_la_ele.mp4" type="video/mp4">
             Seu navegador não suporta vídeo.
         </video> -->
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <P>Desenvolvido por The Felpsz ele memo</P>
+    </footer>
 </body>
 </html>
