--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link">Home</a>
-            <a class="cabecalho__menu__link">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -41,10 +41,6 @@
 
         </section>
         <img src="assets/gato_foda.jpeg" alt="gato_foda">
-        <!-- <video autoplay loop muted playsinline>
-            <source src="assets/esqueleto_la_ele.mp4" type="video/mp4">
-            Seu navegador não suporta vídeo.
-        </video> -->
     </main>
     <footer class="rodape">
         <P>Desenvolvido por The Felpsz ele memo</P>
