criação de vvariáveis no CSS, criação da base de classes da aba about e mudança de paleta de cores

--- a/about.html
+++ b/about.html
@@ -15,11 +15,15 @@
             </nav>
         </header>
 
-        <main>
-            <section>
-
+        <main class="apresentacao">
+            <section class="">
+                <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
+                <p class="apresentacao__conteudo">mui texto muito texto muito textooooooooooooooooooasdodoasdasfghaswjoedighoiawegioaweojg naweojkgnaowejklngoljkwaerngjoaswjolngjwaengjlawejogawekojgojwojajikogbjikaewrbgkjawerbgjknawerb jkçgnabwejknçgawe rjkgbjklçawergjlawerbngljkawerawklejgbnawejklçrgjklçawergkljmçaer gkljmçaeraewrlojkgnaweljkçrgnljmkçaerngjklçmaeraewrpgklçnaerkljgnjklaemçrng
+                </p>
+                <p class="apresentacao__conteudo"> MUITOMAISTEXTOAWSEUJIFGBIJAOLWERBGJIOAWEJOGÇAWEJOGAWEUJ IOGNOAWEUJRGJIOAWERBNGJIKOAWERAW ERGOUJIAERHNGOJIAERNGOJAERBNJOGAEORIGHNAOEUJRGOUJA ERNGOUJAERHNGOUJIAHENRGAERGOUJIA ERHNGONAERUJOGOAEUJRNGOUJAERGUJOAEHRIOGUHAEROUIGHNOAUIE RHNTGAERTGP~IOJAERTGPIOJAERPIOJGTIOP]AEROGJIKA]~PEDORJKF~ÇALDJFG~L.ÇJAEPRIJTGIOPA]EÓRJGTO]AEROGTJIK
+                </p>
             </section>
-            <video autoplay loop muted playsinline>
+            <video autoplay loop muted playsinline class="gif_esqueleto">
             <source src="assets/esqueleto_la_ele.mp4" type="video/mp4">
             Seu navegador não suporta vídeo.
             </video>
