deixei responsivo para outras telas, mas, ainda falta algumas configurações

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                 <p class="apresentacao__conteudo"> MUITOMAISTEXTOAWSEUJIFGBIJAOLWERBGJIOAWEJOGÇAWEJOGAWEUJ IOGNOAWEUJRGJIOAWERBNGJIKOAWERAW ERGOUJIAERHNGOJIAERNGOJAERBNJOGAEORIGHNAOEUJRGOUJA ERNGOUJAERHNGOUJIAHENRGAERGOUJIA ERHNGONAERUJOGOAEUJRNGOUJAERGUJOAEHRIOGUHAEROUIGHNOAUIE RHNTGAERTGP~IOJAERTGPIOJAERPIOJGTIOP]AEROGJIKA]~PEDORJKF~ÇALDJFG~L.ÇJAEPRIJTGIOPA]EÓRJGTO]AEROGTJIK
                 </p>
             </section>
-            <video autoplay loop muted playsinline class="gif_esqueleto">
+            <video class="esqueleto_la_ele" autoplay loop muted playsinline class="gif_esqueleto">
             <source src="assets/esqueleto_la_ele.mp4" type="video/mp4">
             Seu navegador não suporta vídeo.
             </video>
