--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
             </ul>
             <div class="apresentacao__links">
                 <h1 class="apresentacao__links__titulo">Segue minhas redes</h1>
-                <a class="apresentacao__links__link" href="https://www.instagram.com/sir_felpsz">
+                <a class="apresentacao__links__botao" href="https://www.instagram.com/sir_felpsz">
                     <img class="apresentacao__links__img" src="assets/logo_Instagram.png" alt="Logo_Instagram">Instagram
                 </a>
-                <a class="apresentacao__links__link" href="https://github.com/Felpsz-Brucciamolino">
+                <a class="apresentacao__links__botao" href="https://github.com/Felpsz-Brucciamolino">
                     <img class="apresentacao__links__img" src="assets/logo_Github.png" alt="logo_GitHub">GitHub
                 </a>
-                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/felipe-augusto-brusamolin-de-souza-51ab10224">
+                <a class="apresentacao__links__botao" href="https://www.linkedin.com/in/felipe-augusto-brusamolin-de-souza-51ab10224">
                     <img class="apresentacao__links__img" src="assets/logo_Linkedin.png" alt="logo_Linkedin">Linkedin
                 </a>
             </div>
 
         </section>
-        <img src="assets/gato_foda.jpeg" alt="gato_foda">
+        <img class="apresentacao__imagem" src="assets/gato_foda.jpeg" alt="gato_foda">
     </main>
     <footer class="rodape">
         <P>Desenvolvido por The Felpsz ele memo</P>
