Teste VERCEL (só alterei o texto escrito)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Quem é <strong class="destaque_titulo">The_Felpsz?</strong></h1>
-            <p class="apresentacao__conteudo__descricao">Meu nome é Felipe Augusto, tenho 21 anos, moro em Almirante Tamandaré e estou desempregado ☺</p>
+            <p class="apresentacao__conteudo__descricao">Meu nome é Felipe Augusto, sou estudante de Tecnologia da Informação e futuro DEV</p>
 
             <ul class="apresentacao__conteudo__lista">
                 <li>Sou um rapaz que faz programa ( ͡° ͜ʖ ͡°)</li>
